update navigation link and fix section comment

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a class="nav-link" href="">Shop</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Services</a>
+                <a class="nav-link" href="">Features</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="">About Us</a>
@@ -3261,7 +3261,7 @@
         </div>
       </div>
     </section>
-    <!-- End Why Choose Us Section -->
+    <!-- End FAQ Section -->
 
     <!-- Start Footer Section -->
     <footer>
