work on the home page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
     <link rel="stylesheet" href="css/fancybox.css" />
-    <link rel="stylesheet" href="css/animate.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -52,7 +51,7 @@
                 <a class="nav-link" href="">Shop</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Features</a>
+                <a class="nav-link" href="">Services</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="">About Us</a>
@@ -107,11 +106,15 @@
     <!-- Start Banner Section -->
     <section class="banner-sec">
       <div class="face-img-2">
-        <img src="images/face-img2.png" alt="face-img" />
+        <img
+          class="d-none d-lg-block"
+          src="images/face-img2.png"
+          alt="face-img"
+        />
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-md-7">
+          <div class="col-lg-7">
             <div class="banner-content">
               <div class="face-img-1">
                 <span></span>
@@ -122,7 +125,7 @@
                 Our products might smooth, soften, and support your skin’s
                 protective barrier.
               </p>
-              <div class="d-flex gap-3">
+              <div class="d-flex gap-3 flex-wrap">
                 <a href="#" class="button primary-btn">
                   Shop Now
                   <span class="icon">
@@ -143,7 +146,7 @@
                   </span>
                 </a>
                 <a href="#" class="button secondary-btn">
-                  Shop Now
+                  Contact Us
                   <span class="icon">
                     <svg
                       width="18"
@@ -164,8 +167,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-5">
-            <div class="banner-img">
+          <div class="col-lg-5">
+            <div class="banner-img mt-5 mt-lg-0">
               <svg
                 width="60"
                 height="61"
@@ -191,17 +194,12 @@
                 />
               </svg>
               <div class="banner-play-btn">
-                <button
-                  type="button"
-                  class="play-btn"
-                  data-bs-toggle="modal"
-                  data-bs-target="#videoModal"
-                >
+                <a href="#" class="play-btn">
                   <i class="fa-solid fa-play"></i>
                   <div class="text">
                     <p>Explore More collection&nbsp;</p>
                   </div>
-                </button>
+                </a>
               </div>
               <img src="images/banner-img.png" alt="" />
             </div>
@@ -218,25 +216,20 @@
       </div>
       <div class="container">
         <div class="row align-items-center gx-lg-5">
-          <div class="col-md-5">
+          <div class="col-lg-5 col-md-6">
             <div class="about-left">
               <div class="play-btn-wrap">
-                <button
-                  type="button"
-                  class="play-btn"
-                  data-bs-toggle="modal"
-                  data-bs-target="#videoModal"
-                >
+                <a href="#" class="play-btn">
                   <i class="fa-solid fa-play"></i>
                   <div class="text">
                     <p>Explore More collection&nbsp;</p>
                   </div>
-                </button>
+                </a>
               </div>
               <img src="images/about-img.png" alt="" />
             </div>
           </div>
-          <div class="col-md-7">
+          <div class="col-lg-7 col-md-6">
             <div class="about-right">
               <h2 class="common-head">
                 Dedicated to Skincare That May Naturally Enhance and Protect
@@ -1939,7 +1932,7 @@
           </p>
         </div>
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-lg-3 col-md-6">
             <div class="features-item">
               <div class="features-icon">
                 <svg
@@ -2074,7 +2067,7 @@
               </p>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-lg-3 col-md-6">
             <div class="features-item">
               <div class="features-icon">
                 <svg
@@ -2210,7 +2203,7 @@
               </p>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-lg-3 col-md-6">
             <div class="features-item">
               <div class="features-icon">
                 <svg
@@ -2346,7 +2339,7 @@
               </p>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-lg-3 col-md-6">
             <div class="features-item">
               <div class="features-icon">
                 <svg
@@ -2511,7 +2504,7 @@
     <section class="why-choose-us-sec sp-tb bg-1">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <div class="why-us-item">
               <div class="heading-wrap">
                 <h2 class="common-head">Why Choose Us</h2>
@@ -2532,7 +2525,7 @@
                 <li>Skin Balance</li>
                 <li>Customer Satisfaction</li>
               </ul>
-              <div class="d-flex gap-5 align-items-center">
+              <div class="d-flex flex-wrap gap-5 align-items-center">
                 <a href="#" class="button primary-btn">
                   Shop Now
                   <span class="icon">
@@ -2574,40 +2567,11 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="why-us-item">
+          <div class="col-lg-6">
+            <div class="why-us-item mt-5 mt-lg-0">
               <div class="row">
                 <div class="col-6">
                   <div class="why-us-img1">
-                    <span class="box">
-                      <svg
-                        width="45"
-                        height="45"
-                        viewBox="0 0 45 45"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M38.1232 14.1606L27.5337 21.7245L38.1232 29.2885V14.1606Z"
-                          stroke="#F46700"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        />
-                        <path
-                          d="M24.5081 11.1353H7.86738C6.1964 11.1353 4.8418 12.4899 4.8418 14.1609V29.2888C4.8418 30.9598 6.1964 32.3144 7.86738 32.3144H24.5081C26.1791 32.3144 27.5337 30.9598 27.5337 29.2888V14.1609C27.5337 12.4899 26.1791 11.1353 24.5081 11.1353Z"
-                          stroke="#F46700"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        />
-                      </svg>
-
-                      <p>
-                        Video Call <br />
-                        Support
-                      </p>
-                    </span>
                     <img src="images/why-us-img1.jpg" alt="" />
                   </div>
                 </div>
@@ -2615,8 +2579,8 @@
                   <div class="why-us-img2">
                     <div class="google-rating">
                       <img src="images/google-icon.svg" alt="" />
-                      <div>
-                        <div class="d-flex gap-2 align-items-center mb-2">
+                      <div class="w-100">
+                        <div class="d-sm-flex gap-2 align-items-center mb-2">
                           <div class="star-wrap">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -2641,19 +2605,17 @@
     <!-- End Why Choose Us Section -->
 
     <!-- Start Marqee 2 Section -->
-    <section class="marquee-1">
-      <div class="swiper marquee">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide"><h4>Accessories</h4></div>
-          <div class="swiper-slide"><h4>Haircare</h4></div>
-          <div class="swiper-slide"><h4>Nailcare</h4></div>
-          <div class="swiper-slide"><h4>Beautycare</h4></div>
-          <div class="swiper-slide"><h4>Bodycare</h4></div>
-          <div class="swiper-slide"><h4>Skincare</h4></div>
-          <div class="swiper-slide"><h4>Accessories</h4></div>
-          <div class="swiper-slide"><h4>Haircare</h4></div>
-        </div>
-      </div>
+    <section class="marquee-1 marquee-2">
+      <ul class="marquee-list">
+        <li class="marquee-item wow bounceIn">Cleansers</li>
+        <li class="marquee-item wow bounceIn">Moisturizers</li>
+        <li class="marquee-item wow bounceIn">Skincare</li>
+        <li class="marquee-item wow bounceIn">Exfoliators</li>
+        <li class="marquee-item wow bounceIn">Cleansers</li>
+        <li class="marquee-item wow bounceIn">Moisturizers</li>
+        <li class="marquee-item wow bounceIn">Skincare</li>
+        <li class="marquee-item wow bounceIn">Exfoliators</li>
+      </ul>
     </section>
     <!-- End Marqee 2 Section -->
 
@@ -2672,7 +2634,7 @@
           </p>
         </div>
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-lg-3 col-md-6">
             <div class="product-item">
               <div class="product-img">
                 <span class="offer-text">Get 20% Off</span>
@@ -2764,8 +2726,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="product-item">
+          <div class="col-lg-3 col-md-6">
+            <div class="product-item mt-5 mt-md-0">
               <div class="product-img">
                 <span class="offer-text">Get 20% Off</span>
                 <ul class="product-icons">
@@ -2856,8 +2818,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="product-item">
+          <div class="col-lg-3 col-md-6">
+            <div class="product-item mt-5 mt-lg-0">
               <div class="product-img">
                 <span class="offer-text">Get 20% Off</span>
                 <ul class="product-icons">
@@ -2948,8 +2910,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="product-item">
+          <div class="col-lg-3 col-md-6">
+            <div class="product-item mt-5 mt-lg-0">
               <div class="product-img">
                 <span class="offer-text">Get 20% Off</span>
                 <ul class="product-icons">
@@ -3049,7 +3011,7 @@
     <section class="faq-sec sp-tb bg-1">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-md-7">
+          <div class="col-lg-7">
             <div class="faq-item">
               <div class="heading-wrap">
                 <h2 class="common-head">
@@ -3165,7 +3127,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-5">
+          <div class="col-lg-5">
             <div class="faq-img">
               <div class="img-circle">
                 <svg
@@ -3250,22 +3212,22 @@
         </div>
       </div>
     </section>
-    <!-- End FAQ Section -->
+    <!-- End Why Choose Us Section -->
 
     <!-- Start Footer Section -->
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-lg-6 col-md-4">
             <div class="footer-top-item">
               <a href="#">
                 <img src="images/logo-white.svg" alt="" />
               </a>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="footer-top-item">
-              <div class="d-flex justify-content-end gap-3">
+          <div class="col-lg-6 col-md-8">
+            <div class="footer-top-item mt-5 mt-md-0">
+              <div class="d-flex flex-wrap justify-content-md-end gap-3">
                 <a href="#" class="button primary-btn outline-btn-white">
                   Shop Now
                   <span class="icon">
@@ -3286,7 +3248,7 @@
                   </span>
                 </a>
                 <a href="#" class="button secondary-btn">
-                  Shop Now
+                  Contact Us
                   <span class="icon">
                     <svg
                       width="18"
@@ -3337,7 +3299,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="footer-mid-item text-center">
+              <div class="footer-mid-item text-md-center">
                 <h3>Quick Links</h3>
                 <ul>
                   <li>
@@ -3359,7 +3321,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="footer-mid-item text-center">
+              <div class="footer-mid-item text-md-center">
                 <h3>Shop now</h3>
                 <ul>
                   <li>
@@ -3456,55 +3418,17 @@
     </footer>
     <!-- End Footer Section -->
 
-    <!-- Modal -->
-    <div
-      class="modal fade"
-      id="videoModal"
-      tabindex="-1"
-      aria-labelledby="videoModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <iframe
-              width="100%"
-              height="420"
-              src="https://www.youtube.com/embed/zzni9tERtB4?si=Ovnk0ZQdNbVyB-1g"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              allowfullscreen
-            ></iframe>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/fancybox.umd.js"></script>
-    <script src="js/WOW.js"></script>
     <script src="js/main.js"></script>
 
     <script>
       Fancybox.bind("[data-fancybox]", {
         // Your custom options
       });
-    </script>
-    <script>
-      new WOW().init();
     </script>
   </body>
 </html>
