--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
                 </a>
               </li>
               <li>
-                <a href="cart.html">
+                <a
+                  href="#"
+                  data-bs-toggle="offcanvas"
+                  data-bs-target="#offcanvasCart"
+                  aria-controls="offcanvasCart"
+                >
                   <svg
                     width="40"
                     height="32"
@@ -3644,6 +3649,219 @@
               referrerpolicy="strict-origin-when-cross-origin"
               allowfullscreen
             ></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Cart Offcanvas -->
+    <div
+      class="offcanvas offcanvas-end bg-1"
+      tabindex="-1"
+      id="offcanvasCart"
+      aria-labelledby="offcanvasCartLabel"
+    >
+      <div class="offcanvas-header">
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Close"
+        ></button>
+        <h3>
+          Shopping Cart
+          <span class="cart-count">1</span>
+        </h3>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="cart-items">
+          <li>
+            <div class="cart-item-img">
+              <img src="images/product-1.jpg" alt="" />
+            </div>
+            <div class="cart-item-content">
+              <h5>Natural Face Cream</h5>
+              <div class="d-flex align-items-center gap-4">
+                <div class="quantity-wrap">
+                  <button class="decrement-btn">
+                    <i class="fa-solid fa-minus"></i>
+                  </button>
+                  <input
+                    type="text"
+                    id="quantity"
+                    value="1"
+                    min="1"
+                    readonly=""
+                  />
+                  <button class="increment-btn">
+                    <i class="fa-solid fa-plus"></i>
+                  </button>
+                </div>
+                <p>$29.00</p>
+              </div>
+            </div>
+            <button class="remove-btn">
+              <svg
+                width="14"
+                height="14"
+                viewBox="0 0 18 18"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M16.5 1.5L1.5 16.5M1.5 1.5L16.5 16.5"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></path>
+              </svg>
+            </button>
+          </li>
+          <li>
+            <div class="cart-item-img">
+              <img src="images/product-1.jpg" alt="" />
+            </div>
+            <div class="cart-item-content">
+              <h5>Natural Face Cream</h5>
+              <div class="d-flex align-items-center gap-4">
+                <div class="quantity-wrap">
+                  <button class="decrement-btn">
+                    <i class="fa-solid fa-minus"></i>
+                  </button>
+                  <input
+                    type="text"
+                    id="quantity"
+                    value="1"
+                    min="1"
+                    readonly=""
+                  />
+                  <button class="increment-btn">
+                    <i class="fa-solid fa-plus"></i>
+                  </button>
+                </div>
+                <p>$29.00</p>
+              </div>
+            </div>
+            <button class="remove-btn">
+              <svg
+                width="14"
+                height="14"
+                viewBox="0 0 18 18"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M16.5 1.5L1.5 16.5M1.5 1.5L16.5 16.5"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></path>
+              </svg>
+            </button>
+          </li>
+          <li>
+            <div class="cart-item-img">
+              <img src="images/product-1.jpg" alt="" />
+            </div>
+            <div class="cart-item-content">
+              <h5>Natural Face Cream</h5>
+              <div class="d-flex align-items-center gap-4">
+                <div class="quantity-wrap">
+                  <button class="decrement-btn">
+                    <i class="fa-solid fa-minus"></i>
+                  </button>
+                  <input
+                    type="text"
+                    id="quantity"
+                    value="1"
+                    min="1"
+                    readonly=""
+                  />
+                  <button class="increment-btn">
+                    <i class="fa-solid fa-plus"></i>
+                  </button>
+                </div>
+                <p>$29.00</p>
+              </div>
+            </div>
+            <button class="remove-btn">
+              <svg
+                width="14"
+                height="14"
+                viewBox="0 0 18 18"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M16.5 1.5L1.5 16.5M1.5 1.5L16.5 16.5"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></path>
+              </svg>
+            </button>
+          </li>
+          <li>
+            <div class="cart-item-img">
+              <img src="images/product-1.jpg" alt="" />
+            </div>
+            <div class="cart-item-content">
+              <h5>Natural Face Cream</h5>
+              <div class="d-flex align-items-center gap-4">
+                <div class="quantity-wrap">
+                  <button class="decrement-btn">
+                    <i class="fa-solid fa-minus"></i>
+                  </button>
+                  <input
+                    type="text"
+                    id="quantity"
+                    value="1"
+                    min="1"
+                    readonly=""
+                  />
+                  <button class="increment-btn">
+                    <i class="fa-solid fa-plus"></i>
+                  </button>
+                </div>
+                <p>$29.00</p>
+              </div>
+            </div>
+            <button class="remove-btn">
+              <svg
+                width="14"
+                height="14"
+                viewBox="0 0 18 18"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M16.5 1.5L1.5 16.5M1.5 1.5L16.5 16.5"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></path>
+              </svg>
+            </button>
+          </li>
+        </ul>
+        <div class="cart-total bg-1">
+          <h4>
+            <span>Subtotal:</span>
+            <span>$58.00</span>
+          </h4>
+          <div class="d-flex flex-wrap mt-4 gap-3 justify-content-center">
+            <a href="cart.html" class="button primary-btn px-5 py-4 rounded-5"
+              >View Cart</a
+            >
+            <a
+              href="checkout.html"
+              class="button secondary-btn px-5 py-4 rounded-5"
+              >Checkout</a
+            >
           </div>
         </div>
       </div>
