--- a/product.html
+++ b/product.html
@@ -168,7 +168,7 @@
     <!-- End Banner Section -->
 
     <!-- Start Products Details Section -->
-    <section class="product-details-sec sp-tb bg-2">
+    <section class="product-details-sec sp-tb bg-1">
       <div class="container">
         <div class="row gx-lg-5 align-items-center">
           <div class="col-lg-6">
@@ -818,6 +818,69 @@
       Fancybox.bind("[data-fancybox]", {
         // Your custom options
       });
+    </script>
+    <script>
+      const params = new URLSearchParams(window.location.search);
+      const id = params.get("id");
+
+      const mainProduct = products.find((currProduct) => {
+        return currProduct.id == id;
+      });
+      console.log(mainProduct);
+
+      const detailsContent = document.querySelector(
+        ".product-details-sec .row"
+      );
+      detailsContent.innerHTML = `<div class="col-lg-6">
+            <div class="product-img rounded-5 overflow-hidden">
+              <img src="images/product-1.jpg" alt="product-img" />
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="product-details-content mt-5 mt-lg-0">
+              ${
+                mainProduct.price.is_offer_active
+                  ? `<div class="offer-text position-static d-inline-block">
+                ${mainProduct.offers.description}
+              </div>`
+                  : ""
+              }
+              <h2>${mainProduct.name}</h2>
+              <p>
+                ${mainProduct.description}
+              </p>
+              <div class="price">
+                <span class="offered-price">$${mainProduct.price.offer.toFixed(
+                  2
+                )}</span>
+                ${
+                  mainProduct.price.is_offer_active
+                    ? `<del class="original-price">$${mainProduct.price.original.toFixed(
+                        2
+                      )}</del>`
+                    : ""
+                }
+              </div>
+              <div class="quantity-wrap">
+                <button class="decrement-btn">
+                  <i class="fa-solid fa-minus"></i>
+                </button>
+                <input type="text" id="quantity" value="1" min="1" readonly />
+                <button class="increment-btn">
+                  <i class="fa-solid fa-plus"></i>
+                </button>
+              </div>
+              <div class="btn-wrap d-flex flex-wrap gap-4">
+                <a href="" class="button primary-btn">Add to Cart</a>
+                <a href="" class="button secondary-btn">Add to Wishlist</a>
+              </div>
+              <ul class="product-meta">
+                <li><span>SKU:</span> ${mainProduct.sku}</li>
+                <li><span>Category:</span> ${mainProduct.category}</li>
+                <li><span>Tags:</span> ${mainProduct.tags}</li>
+              </ul>
+            </div>
+          </div>`;
     </script>
   </body>
 </html>
